syntax = "proto3";

package auth.user.account.search.service;

import "auth/user/account/x_protobuf/service.proto";

service SearchAuthUserAccountPb {
    rpc Search (SearchAuthUserAccountRequestPb) returns (SearchAuthUserAccountResponsePb);
}
message SearchAuthUserAccountRequestPb {
    int32 offset = 1;
    string sort_key = 2;
    string sort_order = 3;
    repeated string login_id = 4;
}
message SearchAuthUserAccountResponsePb {
    int32 offset = 1;
    int32 limit = 2;
    int32 all = 3;
    string sort_key = 4;
    string sort_order = 5;
    repeated auth.user.account.service.AuthUserAccountPb users = 6;
}
